--- a/style.css
+++ b/style.css
@@ -6,7 +6,27 @@ body {
   margin: 0;
   height: 100vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #343434;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 350px;
+  justify-content: flex-start;
+  padding: 2px;
+}
+.square {
+  width: 16px;
+  height: 16px;
+  background-color: #28282b;
+  box-shadow: 0 0 2px 2px #28282b40;
+  margin: 2px;
+  transition: 2s ease;
+}
+
+.square:hover {
+  transition-duration: 0s;
 }
