--- a/style.css
+++ b/style.css
@@ -11,6 +11,53 @@ body {
   overflow: hidden;
 }
 
+.control-panel {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  width: 400px;
+  height: 600px;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 80px;
+  color: #faf5e4;
+}
+
+.scheme {
+  width: 150px;
+  height: 50px;
+}
+
+.color-row {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+}
+.color-preview {
+  margin-top: 5px;
+  width: 18px;
+  height: 18px;
+}
+
+.scheme button {
+  background-color: transparent;
+  border: none;
+  padding: 2px 5px;
+  cursor: pointer;
+  display: block;
+  margin: 2px auto;
+  transition: all 200ms ease-in-out;
+  color: #faf5e4;
+}
+
+.scheme button:active,
+.scheme button:hover {
+  scale: 0.95;
+}
 .container {
   margin: 10px;
   display: flex;
