--- a/style.css
+++ b/style.css
@@ -24,6 +24,13 @@ h1 {
   text-align: center;
   margin-top: 80px;
   color: #faf5e4;
+  font-size: 25px;
+}
+
+h2 {
+  text-align: center;
+  color: #faf5e4;
+  font-size: 25px;
 }
 
 .scheme {
@@ -77,4 +84,26 @@ h1 {
 
 .square:hover {
   transition-duration: 0s;
+}
+
+.termination-button {
+  margin: 5px;
+  padding: 5px 10px;
+  width: 200px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: #faf5e4;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 0 1px 5px 2px
+    rgba(255, 255, 255, 0.2);
+  transition: all 200ms ease-in-out;
+}
+
+.termination-button:active,
+.termination-button:hover {
+  scale: 0.95;
 }
