--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ h2 {
   text-align: center;
   color: #faf5e4;
   font-size: 25px;
+  margin-bottom: 5px;
 }
 
 .scheme {
@@ -106,4 +107,12 @@ h2 {
 .termination-button:active,
 .termination-button:hover {
   scale: 0.95;
+}
+
+p {
+  text-align: center;
+  margin: 0;
+  color: #faf5e4;
+  font-size: 13px;
+  width: 200px;
 }
